# bunnylol

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  config.yaml
src/: main.rs
templates/: index.html.tera
