[package]
name = "bunnylol"
version = "0.1.0"
authors = ["Flor Zanetta <florzanetta@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
percent-encoding = "2.3.1"
serde = "1.0"
serde_yaml = "0.9"
figment = "0.10.12"
